build: except -XX:+EnableDynamicAgentLoading