@@ -110,15 +110,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
+<!--        LOGNCRASH 종속성-->
+        <dependency>
             <groupId>com.toast.java.logncrash.logback</groupId>
             <artifactId>logncrash-java-sdk3</artifactId>
             <version>3.0.5</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -129,7 +132,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20231013</version>
+            <version>20240303</version>
         </dependency>
 
         <dependency>
@@ -164,11 +167,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
@@ -179,17 +177,6 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
-
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.sonarsource.api.plugin/sonar-plugin-api &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.sonarsource.api.plugin</groupId>-->
-<!--            <artifactId>sonar-plugin-api</artifactId>-->
-<!--            <version>10.14.0.2599</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-
-
-
 
     </dependencies>
     <dependencyManagement>
@@ -229,15 +216,10 @@
                             <artifactId>lombok</artifactId>
                             <version>1.18.36</version>
                         </path>
-
-                        <!--                        <path>-->
-                        <!--                            <groupId>com.querydsl</groupId>-->
-                        <!--                            <artifactId>querydsl-apt</artifactId>-->
-                        <!--                            <classifier>jakarta</classifier>-->
-                        <!--                        </path>-->
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
             <!-- QueryDSL Plugin -->
             <plugin>
                 <groupId>com.mysema.maven</groupId>
@@ -255,12 +237,12 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- 테스트 구동 시에 byte-buddy-agent 관련 경고 뜨는 것 방지하기 위한 설정 -->
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <skipTests>false</skipTests>
                 </configuration>
             </plugin>
 <!--            SonarQube 분석도구-->
